syntax = "proto3";

package common;

option go_package = "github.com/yb2020/odoc/proto/gen/go/common";

// 笔记标签INFO模型
message PdfMarkTagInfo {  
  // 标签id
  string tagId=1;
  // 标签名称
  string tagName=2;
  // 笔记数
  int32 markCount=3;
  // 修改时间
  uint64 modifyDate=4;
}